# v2cpse2

./: CMakeLists.txt  README.md  makefile
week1/: action.hpp  ball  ball.cpp  ball.hpp  drawable.hpp  main.cpp  makefile  rectangle.cpp  rectangle.hpp
week2/: action.hpp  ball.cpp  ball.hpp  main.cpp  makefile  rectangle.cpp  rectangle.hpp  scherm_object.hpp
week3/: ball.cpp  ball.hpp  factory.hpp  factory_exceptions.hpp  image.hpp  line.cpp  line.hpp  main.cpp  makefile  my_objects.txt  rectangle.cpp  rectangle.hpp  scherm_object.hpp
week4/: main.cpp  makefile
week5/: Command.cpp  Command.hpp  Commands.hpp  Makefile  TicTacToe.cpp  TicTacToe.hpp  action.hpp  commandManager.cpp  commandManager.hpp  main.cpp
week5/cli/: main.cpp
week5/sfml/: GameBoardGFX.cpp  GameBoardGFX.hpp  GameRect.cpp  GameRect.hpp  line.cpp  line.hpp  main.cpp  rectangle.cpp  rectangle.hpp  scherm_object.hpp
